[gd_scene load_steps=2 format=3 uid="uid://duxilh8lgmh25"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_7unci"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_7unci")

[node name="Panel" type="Panel" parent="."]
offset_right = 312.0
offset_bottom = 382.0

[node name="Configuración" type="VBoxContainer" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Musica Volumen" type="Label" parent="Panel/Configuración"]
layout_mode = 2
text = "Music Volume"

[node name="Musica_Volumen" type="HSlider" parent="Panel/Configuración"]
layout_mode = 2
value = 100.0

[node name="SFX Volumen" type="Label" parent="Panel/Configuración"]
layout_mode = 2
text = "SFX Volume"

[node name="SFX_Volumen" type="HSlider" parent="Panel/Configuración"]
layout_mode = 2
value = 100.0

[node name="Volver" type="Button" parent="Panel/Configuración"]
layout_mode = 2
text = "Back
"

[node name="Principal" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 3.0
offset_right = 1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Jugar" type="Button" parent="Panel/Principal"]
layout_mode = 2
text = "Jugar"

[node name="Configuración" type="Button" parent="Panel/Principal"]
layout_mode = 2
text = "Configuración
"

[connection signal="value_changed" from="Panel/Configuración/Musica_Volumen" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="Panel/Configuración/SFX_Volumen" to="." method="_on_sfx_volume_value_changed"]
[connection signal="mouse_entered" from="Panel/Configuración/Volver" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="Panel/Configuración/Volver" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="Panel/Principal/Jugar" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="Panel/Principal/Jugar" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="Panel/Principal/Configuración" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="Panel/Principal/Configuración" to="." method="_on_settings_pressed"]
